# Graphiti-API-Library-Development

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_library_&_vcpkg.ps1  install_library_vcpkg.ps1  tools.ps1  vcpkg_Install_User.ps1
CMakeListsFiles/: CMakeLists_For_using_Library.txt  CMakeTesting.txt
TestFolder/: README.md  TestHarness.hpp  Tests.cpp  Tests.hpp  main.cpp
TestFolder/TestData/: OtherTests.txt  Tests.txt  failedTests.txt  passedTests.txt
binding/C/: README.md  build.ps1  capi.h  copy-dll-C.ps1  copy-files.ps1  main.c
binding/examplej/: Main.java  README.md  runJava.ps1
binding/java/: CMakeLists.txt  Graphiti-JNI.cpp  Graphiti.java  README.md  binding_java_Graphiti.h  build.ps1  copy-dll-C.ps1  graphiti_handle.cpp  graphiti_handle.hpp  internal_handle.hpp
binding/jgraphiti/: CMakeLists.txt  Graphiti-JNI.cpp  Graphiti.java  Main.java  README.md  binding_jgraphiti_Graphiti.h  build.ps1  compile_run.ps1  copy-dll.ps1  copy-files.ps1  internal_handle.hpp
binding/python/: README.md  copy-dll-C.ps1  copy-dlls.ps1  copy-files.ps1  graphiti.py  run.ps1  test.py
documents/: Graphiti API Improvements.docx  Graphiti Overview.docx  Graphiti Setup guide.docx  ~$aphiti API Improvements.docx  ~$aphiti Setup guide.docx
lib/: CMakeLists.txt  library.ps1
lib/include/Graphiti/: API.hpp  Extension.hpp
lib/include/Graphiti/CWrapper/: capi.h
lib/include/Graphiti/Connection/: Connection_HID.hpp  Connection_VCP.hpp
lib/src/: API.cpp  Extension.cpp
lib/src/CWrapper/: capi.cpp
lib/src/Connection/: Connection_HID.cpp
main/: ExtensionTest.cpp  main.cpp
scripts/: Set-ExecutionPolicy.ps1  install_library_vcpkg.ps1  tools.ps1  vcpkg_Install_User.ps1
